--- a/css/02.css
+++ b/css/02.css
@@ -1,7 +1,7 @@
-/* section {
+#section_1 {
   padding-top: 5rem;
   margin: 1rem;
-} */
+}
 
 .tekst {
   padding-bottom: 1rem;
@@ -19,9 +19,9 @@ h3 {
     margin-bottom: 5rem;
   }
 
-  /* .tekst {
+  .tekst {
     grid-column: 1;
-  } */
+  }
 
   h3 {
     margin: 1rem;
