--- a/css/05.css
+++ b/css/05.css
@@ -27,4 +27,35 @@ h3 {
   h3 {
     margin: 1rem;
   }
+
+  #section_3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 5rem;
+    margin: 1rem;
+    margin-bottom: 5rem;
+  }
+
+  #section_4 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 5rem;
+    margin: 1rem;
+    margin-bottom: 5rem;
+  }
+
+  #section_5 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 5rem;
+    margin: 1rem;
+    margin-bottom: 5rem;
+  }
+  #section_6 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 5rem;
+    margin: 1rem;
+    margin-bottom: 5rem;
+  }
 }
