--- a/css/forside.css
+++ b/css/forside.css
@@ -1,27 +1,3 @@
-/* h1 {
-  padding-top: 10rem;
-  padding-left: 5rem;
-}
-
-h2 {
-  padding-left: 5rem;
-}
-
-@media (min-width: 600px) {
-  h1 {
-    padding-top: 10rem;
-    padding-left: 5rem;
-  }
-
-  h2 {
-    padding-left: 5rem;
-  }
-} */
-
-/* h1:hover {
-  color: gold;
-} */
-
 body {
   height: 100vw;
   width: 100vw;
@@ -30,4 +6,14 @@ body {
 #section_1 {
   padding-top: 5rem;
   margin: 1rem;
+}
+
+@media (min-width: 600px) {
+  .titel {
+    font-size: 8rem;
+  }
+
+  h1:hover {
+    color: yellow;
+  }
 }
