--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 body {
   background-color: #0e0e0e;
-  background-image: url(http://adamfabricius.dk/kea/06_portfolio/eksamensprojekt/billeder/baggrundsbillede.jpg);
+  background-image: url(http://adamfabricius.dk/kea/06_portfolio/eksamensprojekt/billeder/baggrundsbillede.webp);
   background-size: contain;
   background-repeat: no-repeat;
 
